tests/positive/result_guarded_access.safe
-- Test: result_guarded_access
-- Description: Discriminated result with guarded variant field access.
--   The conditional branch on R.OK establishes the discriminant value,
--   making R.Value and R.Error accessible in their respective branches.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: ACCEPT

package result_Guarded_Access

   type error_Code is range 0 to 255;

   type parse_Result (ok : boolean = False) is record
      case ok
         when True
            value : integer;
         when False
            error : error_Code;



   function try_Parse (input : integer) returns parse_Result

      if input >= 0
         return (ok = True, value = input);
      else
         return (ok = False, error = 1);



   --  Get_Or_Default: guarded access to variant fields.
   --  The branch on R.OK establishes the discriminant in each arm.
   function get_Or_Default (input : integer;
                            default : integer) returns integer
      r : parse_Result = try_Parse (input);

      if r.ok
         return r.value;   -- legal: R.OK = True established
      else
         return default;




