tests/negative/neg_result_unguarded.safe
-- Test: neg_result_unguarded
-- Description: Unguarded access to variant field of discriminated result.
--   Accessing R.Value without establishing R.OK = True violates the
--   discriminant-check safety rule. The compiler must reject this.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package neg_Result_Unguarded

   type error_Code is range 0 to 255;

   type parse_Result (ok : boolean = False) is record
      case ok
         when True
            value : integer;
         when False
            error : error_Code;



   function try_Parse (input : integer) returns parse_Result

      if input >= 0
         return (ok = True, value = input);
      else
         return (ok = False, error = 1);



   --  NONCONFORMING: accesses R.Value without establishing R.OK = True.
   --  The discriminant check cannot be discharged statically.
   function unsafe_Access (input : integer) returns integer
      r : parse_Result = try_Parse (input);

      return r.value;  -- REJECTED: R.OK not established



